<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">GyroTwister</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="clear">Clear</string>
	<string name="allTimeHigh">All time high [rpm]:</string>
	<string name="revolvingSpeed">Revolving speed [rpm]:</string>
	<string name="initAllTimeHigh">0</string>
	<string name="initRevolvingSpeed">0</string>
</resources>
		