<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/idRevolvingSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/revolvingSpeed" />

        <TextView
            android:id="@+id/valRevolvingSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/initRevolvingSpeed" />

        <TextView
            android:id="@+id/idAllTimeHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idRevolvingSpeed"
            android:layout_alignRight="@+id/idRevolvingSpeed"
            android:layout_marginTop="4dp"
            android:text="@string/allTimeHigh" />

        <TextView
            android:id="@+id/valAllTimeHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/idAllTimeHigh"
            android:layout_alignBottom="@+id/idAllTimeHigh"
            android:layout_centerHorizontal="true"
            android:text="@string/initAllTimeHigh" />

        <Button
            android:id="@+id/start"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/idRevolvingSpeed"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="28dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/start"
            android:layout_alignBottom="@+id/start"
            android:layout_centerHorizontal="true"
            android:text="@string/stop" />

        <Button
            android:id="@+id/clear"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/stop"
            android:layout_alignBottom="@+id/stop"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:text="@string/clear" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stop"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/log0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/layout"
            android:text="log0" />

        <TextView
            android:id="@+id/log1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/log0"
            android:text="log1" />

        <TextView
            android:id="@+id/log2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/log1"
            android:text="log2" />

        <TextView
            android:id="@+id/log3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/log2"
            android:text="log3" />

		<TextView
            android:id="@+id/log4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/log3"
            android:text="log4" />

		<TextView
            android:id="@+id/log5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/log4"
            android:text="log5" />

		<TextView
            android:id="@+id/log6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/log5"
            android:text="log6" />

		<TextView
            android:id="@+id/log7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start"
            android:layout_below="@+id/log6"
            android:text="log7" />

		<TextView
		    android:id="@+id/warnUSBConnected0"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/valAllTimeHigh"
		    android:layout_toRightOf="@+id/stop" />

		<TextView
		    android:id="@+id/warnUSBConnected1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@+id/valAllTimeHigh"
		    android:layout_alignBottom="@+id/valAllTimeHigh"
		    android:layout_toRightOf="@+id/stop" />

        </RelativeLayout>
